# RTSGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/shaders/: fragment.glsl  vertex.glsl
src/: GameManager.cpp  GameManager.hpp  Services.hpp  TileType.hpp  TimeLimiter.cpp  TimeLimiter.hpp  camera.h  glad.c  main.cpp  map.h  render.h  tile.h
src/AnotherRendering/: Additional.cpp  Additionals.hpp  Camera.cpp  Camera.hpp  DrawBackend.cpp  DrawBackend.hpp  FrameLimiter.cpp  FrameLimiter.hpp  LayerManager.cpp  LayerManager.hpp  RenderBatcher.cpp  RenderBatcher.hpp  RenderObject.hpp  RenderQueue.cpp  RenderQueue.hpp  RenderSystem.cpp  RenderSystem.hpp  Shaders.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/GameLogic/: map.h  tile.h
src/GameLogic/InputAndController/: InputHandler.cpp  InputHandler.hpp
src/GameLogic/ObjectLogic/: EventBus.hpp  GameObject.cpp  GameObject.hpp  GameObjectFabric.cpp  GameObjectFabric.hpp  object.h  unit.h
src/GameLogic/ObjectLogic/GameComponents/: IComponent.hpp  RendererComponent.hpp  ScriptComponent.hpp  SpriteRendererComponent.hpp  TransformComponent.hpp
src/GameLogic/ObjectLogic/GameObjectComponents/: IComponent.hpp  InputComponent.hpp  MeshComponent.hpp  RenderMashComponent.hpp  SciptComponent.hpp  TransformComponent.hpp
src/GameLogic/ObjectLogic/PhysicalProperties/: Material.hpp  Mesh.hpp
src/GameLogic/SceneManagament/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  scene.hpp  sceneLogic.hpp
src/GameLogic/World/: tile.h
src/MenUI/: UI.h  UInterface.h  menu.h
src/Rendering/: Renderable.hpp  Shaders.hpp  camera.cpp  camera.h  camera.hpp  label.h  material.hpp  render.cpp  render.h  render.hpp  renderable.h  renderable.hpp  shaders.cpp  text.cpp  text.h  text.hpp
src/Rendering [DEPRECATED]/: Camera.cpp  Mesh.hpp  Render.cpp  Shaders.cpp  Text.cpp
src/Sound/: Sound.cpp  Sound.hpp  musicPlayer.h  sound.cpp  sound.hpp
